# amalgam-lisp

./: .flake8  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml  test.am  tox.ini
.github/workflows/: tests.yaml
amalgam/: __init__.py  __main__.py  amalgams.py  cli.py  engine.py  environment.py  grammar.lark  parser.py  primordials.py  repl.py
amalgam/primordials/: __init__.py  arithmetic.py  boolean.py  comparison.py  control.py  io.py  meta.py  string.py  utils.py  vector.py
docs/: amalgams.rst  conf.py  engine.rst  environment.rst  functions.rst  index.rst  parser.rst  primordials.rst  requirements.txt  tutorials.rst
tests/: test_amalgam.py  test_amalgams.py  test_cli.py  test_engine.py  test_environment.py  test_parser.py  test_primordials.py  test_repl.py  utils.py
tests/utils/: __init__.py  mocks.py
