[tool.poetry]
name = "amalgam-lisp"
version = "0.1.0-alpha"
description = "Lisp-like interpreted language implemented in Python"
authors = ["PureFunctor <purefunctor@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
repository = "https://github.com/PureFunctor/amalgam-lisp"
packages = [
    { include = "amalgam" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
parsy = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pre-commit = "^2.5.1"
pytest = "^5.4.3"
hypothesis = "^5.23.11"
tox = "^3.19.0"
tox-travis = "^0.12"
coverage = "^5.2.1"

[tool.coverage.run]
source = ["amalgam"]
omit = ["*tests*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
